# agent-deep-research-trigger

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HARNESS.md  MANIFEST.in  README.md  README.zh-TW.md  SCENARIOS.md  SKILL.md  WORKERS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md
examples/eval/: README.md  annotations.example.jsonl  questions.jsonl
examples/quickstart/: sample_ledger.jsonl  sample_report.md  sample_state.md
examples/transcripts/: README.md  decision-critical.md  literature-review.md  quick-fact.md
examples/v2/: README.md  medium-contract.json
research_harness/: __init__.py  _canon.py  artifacts.py  boundary.py  contracts.py  provider_registry.json  providers.py  quota.py  rendering.py  state.py  storage.py  validation.py
research_harness/adapters/: README.md  __init__.py  brave.py  crossref.py  europe_pmc.py  exa.py  gemini_deep.py  github.py  ietf.py  nvd.py  openai_deep.py  openalex.py  osv.py  perplexity_deep.py  scholar.py  sonar.py
scripts/: __init__.py  calibration_report.py  deep_research.py  doctor.py  release_gate.py  research_state.py  validate_state.py  validate_transcripts.py
tests/: __init__.py  helpers.py  test_artifacts.py  test_async_boundary.py  test_boundary.py  test_brave.py  test_calibration.py  test_cli.py  test_contracts.py  test_crossref.py  test_docs.py  test_doctor.py  test_europe_pmc.py  test_exa.py  test_gemini_deep.py  test_github.py  test_ietf.py  test_legacy_worker.py  test_nvd.py  test_openai_deep.py  test_openalex.py  test_osv.py  test_pypi.py  test_quota.py  test_release_gate.py  test_rendering.py  test_scholar.py  test_state.py  test_task3b_atomicity.py  test_validation.py
tests/fixtures/: brave_invalid_token.json  brave_missing_results.json  brave_success.json  europe_pmc_error_body.json  europe_pmc_missing_resultlist.json  europe_pmc_success.json  exa_error_body.json  exa_missing_results.json  exa_success.json  gemini_deep_poll_malformed_completed.json  gemini_deep_poll_requires_action.json  gemini_deep_poll_running.json  gemini_deep_poll_terminal_failure.json  gemini_deep_poll_terminal_success.json  gemini_deep_submit_accept.json  github_malformed_missing_full_name.json  github_not_found.json  github_success.json  ietf_malformed_missing_doc_id.json  nvd_empty_vulnerabilities.json  nvd_non_dict.json  nvd_success.json  openai_deep_poll_malformed_terminal.json  osv_success.json  (+12 more)
(+27 files in other folders)
