[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-research-cascade"
version = "2.0.0.dev1"
description = "Host-neutral, contract-bound research runtime for tool-using coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jechiu16" }]
dependencies = [
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
gemini = ["google-genai>=2.0,<3"]
dev = [
  "build>=1.2,<2",
  "coverage[toml]>=7.6,<8",
  "pip-audit>=2.9,<3",
  "ruff>=0.12,<1",
  "twine>=6,<7",
]

[project.scripts]
deep-research-state = "scripts.research_state:main"
deep-research-doctor = "scripts.doctor:main"
deep-research-release-gate = "scripts.release_gate:main"

[project.urls]
Repository = "https://github.com/jechiu16/claude-research-cascade"

[tool.setuptools.packages.find]
include = ["research_harness*", "scripts*"]

[tool.setuptools.package-data]
research_harness = ["provider_registry.json"]

[tool.coverage.run]
branch = true
source = ["research_harness"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/render_report.py" = ["E402"]
"scripts/research_state.py" = ["E402"]
"scripts/validate_state.py" = ["E402"]
